Index com 9 capítulos; .nojekyll para Pages

--- a/OEBPS/nav.xhtml
+++ b/OEBPS/nav.xhtml
@@ -16,6 +16,7 @@
 
       <li><a href="text/cap02_modelagem_conceitual.html">Capítulo 2 – Modelagem</a></li>
       <li><a href="text/cap03_modelagem_logica.html">Capítulo 3 – Modelo Lógico Relacional</a></li>
+      <li><a href="text/cap04_linguagem_sql.html">Capítulo 4 – Linguagem SQL: Definição, Manipulação e Segurança de Dados</a></li>
     </ol>
   </nav>
 </body>
